# global-optimization-test-problems

./: .gitignore  CMakeLists.txt  README.md
benchmark_tools/: core.py  plot.py  stats.py
go-problems/: bindings.cpp  problem_interface.hpp  problem_wrapper.hpp
go-problems/gkls/: CMakeLists.txt
go-problems/gkls/include/: gkls_function.hpp  gkls_type.hpp
go-problems/gkls/src/: gkls_function.cpp
go-problems/grishagin/: CMakeLists.txt
go-problems/grishagin/include/: grishagin_function.hpp
go-problems/grishagin/src/: grishagin_function.cpp  py_grishagin.cpp
